# DayFeel-Auth

./: .copier-answers.yml  .env.example  .pylintrc  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 333adc2790c7_create_users_tables.py  97dda666f046_add_auth_sessions_table.py
data/: Dockerfile
dayfeel_auth/: __init__.py  app.py  events.py  main.py  models.py
dayfeel_auth/db/sqlalchemy/models/: auth_sessions.py  users.py
dayfeel_auth/db/sqlalchemy/repository/: auth_sessions.py  users.py
dayfeel_auth/db/sqlalchemy/setup/: base.py  database_engine.py  db_connection_handler.py
dayfeel_auth/enums/: user_role.py
dayfeel_auth/err/: __init__.py  already_exists_error.py  database_unavailable_error.py  dayfeel_autherror.py  invalid_token_error.py
dayfeel_auth/responders/: errors.py
dayfeel_auth/routers/: __init__.py  auth.py  system.py  users.py
dayfeel_auth/schemas/: container.py
dayfeel_auth/schemas/endpoints/: auth.py  users.py
dayfeel_auth/utils/: auth.py  security.py
dayfeel_auth/utils/routers/: require_admin.py
scripts/: build  dev  init  test
