[tool.poetry]
name = "dayfeel_auth"
version = "0.2.0"
description = "This is a service to take care of DayFeel API authentications"
authors = ["Eduardo Kairalla"]
packages = [{include = "dayfeel_auth"}]
include = ["pyproject.lock"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.116.1"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.5"
argon2-cffi = "^25.1.0"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pylint_exit = "^1.2.0"
isort = "^6.0.1"
